# Robotics_Assignment3

./: README.md
ass3/: Ass.csp  Direction.py  Map.csp  Map.txt  Output.txt  frames.gv  interface.py
ass3/devel/: .catkin  local_setup.sh
ass3/src/cpp_map_listener/: CMakeLists.txt
ass3/src/cpp_map_listener/launch/: bigboy.launch  gazebo.launch  rviz.launch  slam.launch
ass3/src/cpp_map_listener/src/: map_listener.cpp
ass3/src/cpp_map_listener/worlds/: test
ass3/src/mover/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ass3/src/mover/atomic_configure/: setup.sh
ass3/src/mover/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
ass3/src/mover/catkin_generated/installspace/: mover-msg-extras.cmake  mover-msg-paths.cmake  mover.pc  moverConfig.cmake
ass3/src/mover/catkin_generated/stamps/mover/: package.xml.stamp
ass3/src/mover/cmake/: mover-genmsg-context.py  mover-genmsg.cmake
ass3/src/mover/devel/: .catkin  .rosinstall  local_setup.sh
ass3/src/mover/devel/lib/pkgconfig/: mover.pc
ass3/src/mover/devel/share/mover/cmake/: mover-msg-extras.cmake  moverConfig.cmake
ass3/src/mover/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ass3/src/mover/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ass3/src/mover/gtest/googletest/: CTestTestfile.cmake  Makefile
ass3/src/mover/msg/: Direction.msg
ass3/src/mover/src/: move_robot.cpp  move_robot.h
(+37 files in other folders)
